<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/coral_pink"
    tools:context="testsword.swordtest.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="@dimen/layout_width_box"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/black_background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/layout_margin"
            android:src="@drawable/logo_sword"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginBottom="@dimen/margin_top_tv_et"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:text="@string/tv_email"
            style="@style/TextViewStyle"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:ems="10"
            android:inputType="textEmailAddress"
            style="@style/TextViewStyle"/>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginTop="@dimen/margin_top_tv_et"
            android:text="@string/tv_password"
            style="@style/TextViewStyle" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword"
            android:layout_marginTop="@dimen/margin_top_tv_et"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:ems="10"
            android:inputType="textPassword"
            style="@style/EditTextStyle" />

        <Button
            android:id="@+id/btLogin"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/bt_login" />
    </RelativeLayout>

</RelativeLayout>
