<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_userphoto"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_marginTop="19dp"
                android:src="@drawable/photo_professional" />

            <TextView
                android:id="@+id/tv_patient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_below="@+id/iv_userphoto"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5.5dp"
                android:textSize="14sp"
                android:textColor="@color/sgrey70" />

            <TextView
                android:id="@+id/tv_patient_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_patient_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:textColor="@color/sgrey20"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_patient_age"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7.5dp"
                android:text="@string/tv_status"
                android:textColor="@color/sgrey40"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_status"
                android:layout_marginTop="4.5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title_compliance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_compliance"
                    android:textSize="12sp"
                    android:textColor="@color/sgrey40" />

                <TextView
                    android:id="@+id/tv_title_lastsession"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_lastsession"
                    android:textSize="12sp"
                    android:textColor="@color/sgrey40"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearlayout"
                android:layout_marginBottom="6.6dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_patient_compliance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_patient_lastsession"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/_2_days_ago"
                    android:textSize="13sp"
                    android:textColor="@color/sgrey70" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>